force-app/main/default/objects/Stripe_Discount__c/Stripe_Discount__c.object-meta.xml
<CustomObject>
    <label>Stripe Discount</label>
    <nameField>
        <displayFormat>DIS-{0000}</displayFormat>
        <label>Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 