force-app/main/default/objects/Stripe_Discount__c/fields/Amount_Off__c.field-meta.xml
<CustomField>
    <fullName>Amount_Off__c</fullName>
    <description>Amount off in cents for this discount</description>
    <label>Amount Off (cents)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 