force-app/main/default/objects/Stripe_Discount__c/fields/Coupon_ID__c.field-meta.xml
<CustomField>
    <fullName>Coupon_ID__c</fullName>
    <description>Stripe Coupon ID associated with this discount</description>
    <label>Coupon ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 