force-app/main/default/objects/Stripe_Discount__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>Currency code for this discount</description>
    <label>Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField> 