force-app/main/default/objects/Stripe_Discount__c/fields/Duration_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Months__c</fullName>
    <description>Duration in months for repeating discounts</description>
    <label>Duration in Months</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 