force-app/main/default/objects/Stripe_Discount__c/fields/Max_Redemptions__c.field-meta.xml
<CustomField>
    <fullName>Max_Redemptions__c</fullName>
    <description>Maximum number of times this discount can be redeemed</description>
    <label>Max Redemptions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 