force-app/main/default/objects/Stripe_Discount__c/fields/Percent_Off__c.field-meta.xml
<CustomField>
    <fullName>Percent_Off__c</fullName>
    <description>Percentage off for this discount</description>
    <label>Percent Off</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField> 