force-app/main/default/objects/Stripe_Discount__c/fields/Stripe_Discount_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Discount_ID__c</fullName>
    <description>External ID from Stripe for this discount</description>
    <externalId>true</externalId>
    <label>Stripe Discount ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField> 