force-app/main/default/objects/Stripe_Discount__c/fields/Times_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Times_Redeemed__c</fullName>
    <description>Number of times this discount has been redeemed</description>
    <label>Times Redeemed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 