force-app/main/default/objects/Stripe_Discount__c/fields/Valid__c.field-meta.xml
<CustomField>
    <fullName>Valid__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this discount is valid</description>
    <label>Valid</label>
    <type>Checkbox</type>
</CustomField> 